--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -1,3 +1,17 @@
 .App {
   text-align: center;
+  background-color: #F6F8F2;
+  height: 100vh;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.Information {
+  display: flex;
+  justify-content: space-evenly;
+  width: 95vw;
+  padding: 1em;
+  border-bottom: 2px solid #2A2A28;
 }
