--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -1,9 +1,6 @@
 .Navbar {
-  background-color: #f4f3ee;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: #2E4561;
+  background-color: #CFDBD5;
+  color: #2A2A28;
+  width: 100%;
+  padding: 1em;
 }
