--- a/src/components/Contact.scss
+++ b/src/components/Contact.scss
@@ -1,8 +1,7 @@
 .Contact {
-  margin-right: 2em;
+  // margin-right: 2em;
   border: 1px solid red;
-  padding: 1em;
-  width: 45%;
+  // padding: 1em;
   text-align: left;
 
   span {
