--- a/src/components/Info.scss
+++ b/src/components/Info.scss
@@ -2,6 +2,5 @@
   background-color: #F8DB8C;
   color: #2A2A28;
   background-image: url("https://www.transparenttextures.com/patterns/arches.png");
-  width: 100%;
-  padding: 1em;
+  // padding: 1em;
 }
