--- a/src/components/Languages.scss
+++ b/src/components/Languages.scss
@@ -1,7 +1,7 @@
 .Languages {
-  margin-left: 2em;
+  // margin-left: 2em;
   border: 1px solid red;
-  padding: 1em;
+  // padding: 1em;
   width: 45%;
   text-align: left;
 
