--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -2,11 +2,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100vw;
 
+  width: 100vw;
   background-color: #CFDBD5;
   color: #2A2A28;
-  // padding: 1em;
 
   :hover {
     color: #F6F8F2;
@@ -15,19 +14,35 @@
   .menu-icon {
     height: 2.5em;
     width: 3.5em;
-    // margin-left: 2em;
-    // margin-right: 2em;
+    margin: 0 2em 0 2em;
+    padding: 2em 0 2em 0;
+
+    display: flex;
+    align-items: center;
   }
 
   .envelope {
-    height: 3.1rem;
+    height: 3rem;
     width: 5rem;
-    padding: 0;
+  }
+
+  .brain {
+    height: 2.5rem;
+    width: 3.5rem;
+  }
+
+  .terminal {
+    height: 2.3rem;
+    width: 3.5rem;
   }
 
   .cap {
     height: 3.1rem;
-    width: 5rem;
-    padding: 0;
+    width: 3.5rem;
+  }
+
+  .laptop {
+    height: 2.9rem;
+    width: 3.3rem;
   }
 }
