--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -6,6 +6,9 @@
   padding: 0px auto;
   margin: 0px auto;
 
+  font-family: 'Alegreya Sans SC', sans-serif;
+  font-family: 'Quicksand', sans-serif;
+
   display: flex;
   flex-direction: column;
   align-items: center;
