--- a/src/components/Info.scss
+++ b/src/components/Info.scss
@@ -2,5 +2,24 @@
   background-color: #F8DB8C;
   color: #2A2A28;
   background-image: url("https://www.transparenttextures.com/patterns/arches.png");
-  // padding: 1em;
+  width: 100vw;
+  padding: 2em 0 2em 0;
+
+  img {
+    border-radius: 50%;
+    width: 200px;
+  }
+
+  h1 {
+    font-family: 'Alegreya Sans SC', sans-serif;
+    font-weight: 600;
+    margin: 0px auto;
+    padding-top: .5em;
+  }
+
+  h2 {
+    font-weight: 600;
+    margin: 0px auto;
+    padding-top: .3em;
+  }
 }
