--- a/src/components/Divider.scss
+++ b/src/components/Divider.scss
@@ -1,4 +1,6 @@
+@import './App.scss';
+
 .Divider {
-  border-bottom: 2px solid #2A2A28;
+  border-bottom: 2px solid $text-color;
   width: 95vw;
 }
