--- a/src/components/Summary.scss
+++ b/src/components/Summary.scss
@@ -1,4 +1,80 @@
+@import './App.scss';
+
 .Summary {
   text-align: center;
-  // padding: 1em;
+  width: 100vw;
+  // border: 1px solid blue;
+  padding: 0;
+  margin: 0 auto;
+  color: $text-color;
+}
+
+article {
+  width: 90vw;
+  font-size: 1.5em;
+  // border: 1px solid red;
+  padding-top: 1em;
+  margin: 0 auto;
+  overflow: hidden;
+  margin-top: 1.5em;
+  margin-bottom: 1.5em;
+}
+
+.arrow {
+	bottom: 50%;
+	left: 50%;
+}
+
+.bounce {
+	-moz-animation: bounce 3s infinite;
+	-webkit-animation: bounce 3s infinite;
+	animation: bounce 3s infinite;
+}
+@-moz-keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    -moz-transform: translateY(25px);
+    transform: translateY(25px);
+  }
+  40% {
+    -moz-transform: translateY(-15px);
+    transform: translateY(-15px);
+  }
+  60% {
+    -moz-transform: translateY(-5px);
+    transform: translateY(-5px);
+  }
+}
+@-webkit-keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    -webkit-transform: translateY(25px);
+    transform: translateY(25px);
+  }
+  40% {
+    -webkit-transform: translateY(-10px);
+    transform: translateY(-10px);
+  }
+  60% {
+    -webkit-transform: translateY(-5px);
+    transform: translateY(-5px);
+  }
+}
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    -moz-transform: translateY(25px);
+    -ms-transform: translateY(25px);
+    -webkit-transform: translateY(25px);
+    transform: translateY(25px);
+  }
+  40% {
+    -moz-transform: translateY(-10px);
+    -ms-transform: translateY(-10px);
+    -webkit-transform: translateY(-10px);
+    transform: translateY(-10px);
+  }
+  60% {
+    -moz-transform: translateY(-5px);
+    -ms-transform: translateY(-5px);
+    -webkit-transform: translateY(-5px);
+    transform: translateY(-5px);
+  }
 }
