--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -5,29 +5,27 @@ $title-font: 'Alegreya Sans SC', sans-serif;
 $paragraph-font: 'Quicksand', sans-serif;
 
 .App {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
   text-align: center;
   background-color: $body-color;
   width: 100vw;
   padding: 0px auto;
   margin: 0px auto;
-
-  font-family: $title-font;
   font-family: $paragraph-font;
-
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
 }
 
 .Information {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
+  
   color: $text-color;
 }
 
 h1 {
-  font-family: 'Alegreya Sans SC', sans-serif;
+  font-family: $title-font;
   font-weight: 600;
   margin: 0px auto;
 }
