--- a/src/components/Languages.scss
+++ b/src/components/Languages.scss
@@ -1,9 +1,9 @@
+@import './App.scss';
+
 .Languages {
-  // margin-left: 2em;
   border: 1px solid red;
-  // padding: 1em;
-  width: 45%;
-  text-align: left;
+  width: 45vw;
+  text-align: center;
 
   li {
     list-style: none;
