--- a/src/components/Info.scss
+++ b/src/components/Info.scss
@@ -1,24 +1,33 @@
 @import './App.scss';
 
 .Info {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+
   background-color: #F8DB8C;
   color: $text-color;
   background-image: url("https://www.transparenttextures.com/patterns/arches.png");
   width: 100vw;
-  padding: 2em 0 2em 0;
+  padding: 1em 0 1em 0;
+
+  aside {
+    display: flex;
+    flex-direction: column;
+  }
 
   img {
     border-radius: 50%;
     width: 200px;
+    margin-bottom: 1.5em;;
   }
+}
 
-  h1 {
-    padding-top: 1em;
-  }
+.contact-icons {
+  font-size: 2em;
+  margin: -0.2em .5em 0 .5em;
 
-  h2 {
-    font-weight: 600;
-    margin: 0px auto;
-    padding-top: .3em;
+  :hover {
+    color: $body-color;
   }
 }
