--- a/src/components/Languages.scss
+++ b/src/components/Languages.scss
@@ -1,19 +1,47 @@
 @import './App.scss';
 
 .Languages {
-  border: 1px solid red;
-  width: 35vw;
-  text-align: left;
-  
+  align-self: flex-end;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 
-  li {
-    list-style: none;
-    margin: .7em 0 .7em 0;
-  }
+  text-align: center;
 
   h1 {
-    font-size: 1.4em;
-    text-align: center;
-    margin: .7em 0 .7em 0;
+    margin-left: 1.2em;
   }
+
+  .lang-content {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+
+    .lang-list {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+  
+      li {
+        list-style: none;
+        font-size: 1.5em;
+        text-align: center;
+        font-family: $title-font;
+        font-weight: 700;
+        padding: .4em 0 .3em 0;
+      }
+    }
+  
+    .lang-bars {
+      width: 20vw;
+
+    }
+
+    .lang-levels {
+      text-align: left;
+      font-size: 1.3em;
+    }
+  }
+
+
 }
