Style skills component

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -1,6 +1,8 @@
 $body-color: #F6F8F2;
 $navbar-color: #CFDBD5;
 $text-color: #2A2A28;
+$info-color: #F8DB8C;
+$accent-color: #F88E2C;
 $title-font: 'Alegreya Sans SC', sans-serif;
 $paragraph-font: 'Quicksand', sans-serif;
 
