--- a/src/components/Info.scss
+++ b/src/components/Info.scss
@@ -19,7 +19,8 @@
   img {
     border-radius: 50%;
     width: 200px;
-    margin-bottom: 1.5em;;
+    margin-bottom: 1.5em;
+    box-shadow: 5px 5px 8px #888888;
   }
 }
 
