--- a/src/components/Languages.scss
+++ b/src/components/Languages.scss
@@ -7,6 +7,8 @@
   align-items: flex-end;
 
   text-align: center;
+  margin-top: 1em;
+  margin-bottom: 1em;
 
   h1 {
     margin-left: 1.2em;
@@ -34,7 +36,7 @@
   
     .lang-bars {
       width: 20vw;
-
+      color:$accent-color;
     }
 
     .lang-levels {
