--- a/src/components/Skills.scss
+++ b/src/components/Skills.scss
@@ -1,6 +1,36 @@
 @import './App.scss';
 
 .Skills {
-  text-align: center;
-  color: $text-color;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 93vw;
+
+  .skills-text {
+    text-align: right;
+    margin-top: -0.7em;;
+  }
+
+  h3 {
+    color: $body-color;
+  }
+
+  h2 {
+    // padding: 0;
+    // margin: 0;
+  }
+
+  // text-align: center;
+  // color: $text-color;
+  // width: 50vw;
+  // margin-top: 1em;
+  // margin-bottom: 1em;
+  // margin-right: 10em;
+  // font-size: 1.3em;
+
+  img {
+    height: 50vh;
+    margin: 1em 0 1em 0;
+  }
 }
