Add new color scheme, replace old colors, remove skill module(no longer needed)

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -1,8 +1,15 @@
 $body-color: #F6F8F2;
-$navbar-color: #CFDBD5;
 $text-color: #2A2A28;
-$info-color: #F8DB8C;
-$accent-color: #F88E2C;
+$light-orange: #F88E2C;
+$dark-orange: #E87D2D;
+$light-blue: #115E8C;
+$dark-blue: #105570;
+$light-red: #F24A56;
+$dark-red: #DB4355;
+$light-green: #44C3D0;
+$dark-green: #41B0AF;
+
+
 $title-font: 'Alegreya Sans SC', sans-serif;
 $paragraph-font: 'Quicksand', sans-serif;
 
