--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -6,7 +6,7 @@
   justify-content: center;
 
   width: 100vw;
-  background-color: $navbar-color;
+  background-color: $light-orange;
   color: $text-color;
 
   :hover {
