--- a/src/components/Info.scss
+++ b/src/components/Info.scss
@@ -5,7 +5,7 @@
   align-items: center;
   justify-content: space-evenly;
 
-  background-color: #F8DB8C;
+  background-color: $dark-blue;
   color: $text-color;
   background-image: url("https://www.transparenttextures.com/patterns/arches.png");
   width: 100vw;
@@ -20,7 +20,6 @@
     border-radius: 50%;
     width: 200px;
     margin-bottom: 1.5em;
-    box-shadow: 5px 5px 8px #888888;
   }
 }
 
