--- a/src/components/Skills.scss
+++ b/src/components/Skills.scss
@@ -14,20 +14,17 @@
 
   h3 {
     color: $body-color;
+    margin-top: 1.3em;
   }
 
-  h2 {
-    // padding: 0;
-    // margin: 0;
+  .move-right{
+    position: relative;
+    right: -3em;
   }
 
-  // text-align: center;
-  // color: $text-color;
-  // width: 50vw;
-  // margin-top: 1em;
-  // margin-bottom: 1em;
-  // margin-right: 10em;
-  // font-size: 1.3em;
+  .move-up {
+    margin-top: -0.7em;
+  }
 
   img {
     height: 50vh;
