--- a/src/components/SoftSkills.scss
+++ b/src/components/SoftSkills.scss
@@ -3,12 +3,28 @@
 .SoftSkills {
   display: flex;
   justify-content: center;
-  align-items: center;
 
   color: $text-color;
+  text-align: left;
+  margin-left: .5em;
 
   .soft-skills {
-    width: 55vw;
+    width: 50vw;
   }
 
+  h1 {
+    margin-top: .5em;
+  }
+
+  h3 {
+    margin-top: .7em;
+  }
+
+  .soft-skills-list {
+    font-size: 1.3em;
+
+    span {
+      font-weight: 700;
+    }
+  }
 }
