--- a/src/components/Timeline.scss
+++ b/src/components/Timeline.scss
@@ -11,15 +11,17 @@
     
     font-size: 1.5em;
     text-align: left;
-    width: 10vw;
+    width: 15vw;
     padding-top: .4em;;
   }
 
   h3 {
     position: relative;
     top: -1.1em;
-    // left: -0.4em;
+    right: -1.5em;
     font-size: .8em;
+    text-align: left;
+    // border: 2px solid green;
   }
 
   .chevron {
