--- a/src/components/Details.scss
+++ b/src/components/Details.scss
@@ -2,25 +2,47 @@
 
 .Details {
   text-align: left;
-  width: 77vw;
+  width: 74vw;
   padding-left: 1.5em;
   border-left: 2px solid $text-color;
   // border: 2px solid red;
 
-  h1 {
-    margin-top: .1em;
-  }
-
-  h3 {
-    margin-top: -0.3em;
-  }
-  
-  a {
-    color: $text-color;
+  span {
+    font-weight: 700;
   }
 
 } 
 
 .Details > p {
   font-size: 1.3em;
+}
+
+header {
+  display: flex;
+
+  img {
+    width: 5em;
+    height: 4.55em;
+    border: 1px solid $text-color;
+  }
+
+  .job-info {
+  display: flex;
+  flex-direction: column;
+
+    h1 {
+      margin-top: .1em;
+      width: 100%;
+      padding-left: .3em;
+    }
+
+    h3 {
+      margin-top: -0.1em;
+      padding-left: .5em;
+    }
+  
+    a {
+      color: $text-color;
+    }
+  }
 }
