--- a/src/components/Timeline.scss
+++ b/src/components/Timeline.scss
@@ -18,9 +18,10 @@
   h3 {
     position: relative;
     top: -1.1em;
-    right: -1.5em;
+    right: -1em;
     font-size: .8em;
     text-align: left;
+    width: 6em;
     // border: 2px solid green;
   }
 
