--- a/src/components/Home_page/Summary.scss
+++ b/src/components/Home_page/Summary.scss
@@ -1,4 +1,4 @@
-@import './App.scss';
+@import '../App.scss';
 
 .Summary {
   text-align: center;
@@ -11,7 +11,7 @@
 
 article {
   width: 90vw;
-  font-size: 1.5em;
+  // font-size: 1.5em;
   // border: 1px solid red;
   padding-top: 1em;
   margin: 0 auto;
