--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -24,6 +24,7 @@ $paragraph-font: 'Quicksand', sans-serif;
   padding: 0px auto;
   margin: 0px auto;
   font-family: $paragraph-font;
+  font-size: 1.5em;
 }
 
 h1 {
