--- a/src/components/Skills_page/Languages.scss
+++ b/src/components/Skills_page/Languages.scss
@@ -1,4 +1,4 @@
-@import './App.scss';
+@import '../App.scss';
 
 .Languages {
   align-self: flex-end;
@@ -24,7 +24,7 @@
   
       li {
         list-style: none;
-        font-size: 1.5em;
+        // font-size: 1.5em;
         text-align: center;
         font-family: $title-font;
         font-weight: 700;
@@ -39,7 +39,7 @@
 
     .lang-levels {
       text-align: left;
-      font-size: 1.3em;
+      // font-size: 1.3em;
     }
   }
 
