--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -18,17 +18,30 @@ $paragraph-font: 'Quicksand', sans-serif;
   flex-direction: column;
   align-items: center;
 
-  text-align: center;
+  font-family: $paragraph-font;
   background-color: $body-color;
+  text-align: center;
   width: 100vw;
   padding: 0px auto;
   margin: 0px auto;
-  font-family: $paragraph-font;
-  font-size: 1.5em;
 }
 
 h1 {
   font-family: $title-font;
   font-weight: 600;
-  margin: 0px auto;
+  font-size: 1.8em;
+}
+
+h2 {
+  font-weight: 600;
+  font-size: 1.5em;
+}
+
+h3 {
+  font-weight: 600;
+  font-size: 1.2em;
+}
+
+p {
+  font-size: 1.3em;
 }
