--- a/src/components/Home_page/Summary.scss
+++ b/src/components/Home_page/Summary.scss
@@ -1,23 +1,13 @@
 @import '../App.scss';
 
-.Summary {
-  text-align: center;
-  width: 100vw;
-  // border: 1px solid blue;
-  padding: 0;
-  margin: 0 auto;
-  color: $text-color;
-}
-
 article {
-  width: 90vw;
-  // font-size: 1.5em;
-  // border: 1px solid red;
+  width: 80vw;
   padding-top: 1em;
   margin: 0 auto;
-  overflow: hidden;
-  margin-top: 1.5em;
-  margin-bottom: 1.5em;
+}
+
+h3 {
+  margin: .5em 0 1.5em 0;
 }
 
 .arrow {
@@ -37,8 +27,8 @@ article {
     transform: translateY(25px);
   }
   40% {
-    -moz-transform: translateY(-15px);
-    transform: translateY(-15px);
+    -moz-transform: translateY(-10px);
+    transform: translateY(-10px);
   }
   60% {
     -moz-transform: translateY(-5px);
