--- a/src/components/Shared/Timeline.scss
+++ b/src/components/Shared/Timeline.scss
@@ -1,32 +1,37 @@
 @import '../App.scss';
 
 .Timeline {
-  // border: 2px solid blue;
+  display: flex;
 
+  width: 15%;
 
   aside {
     display: flex;
-    align-items: flex-start;
-    justify-content: flex-end;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: right;
     
-    // font-size: 1.5em;
-    text-align: left;
-    width: 15vw;
-    padding-top: .4em;;
-  }
+    text-align: right;
+    width: 90%;
 
-  h3 {
-    position: relative;
-    top: -1.1em;
-    right: -1em;
-    // font-size: .8em;
-    text-align: left;
-    width: 6em;
-    // border: 2px solid green;
+    h3 {
+      text-align: right;
+      margin-top: .65em;
+    }
+
+    .year2 {
+      margin-top: -.5em;
+    }
+
+    .down-arrow {
+      margin: -1.8em 0 .9em 0;
+    }
+
   }
 
   .chevron {
     position: relative;
-    right: -0.75em;
+    top: 1.1em;
+    right: -.75em;
   }
 }
