--- a/src/components/Skills_page/Languages.scss
+++ b/src/components/Skills_page/Languages.scss
@@ -1,21 +1,17 @@
 @import '../App.scss';
 
 .Languages {
-  align-self: flex-end;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
 
-  text-align: center;
-
-  h1 {
-    margin-left: 1.2em;
-  }
+  width: 50%;
 
   .lang-content {
     display: flex;
     align-items: center;
-    justify-content: flex-end;
+
+    width: 90%;
 
     .lang-list {
       display: flex;
@@ -24,24 +20,23 @@
   
       li {
         list-style: none;
-        // font-size: 1.5em;
         text-align: center;
         font-family: $title-font;
         font-weight: 700;
-        padding: .4em 0 .3em 0;
+        padding: .4em 0 .4em 0;
       }
     }
   
     .lang-bars {
-      width: 20vw;
+      width: 60%;
       color:$dark-green;
     }
 
     .lang-levels {
       text-align: left;
-      // font-size: 1.3em;
+      font-size: .69em;
+      position: relative;
+      right: -2em;
     }
   }
-
-
 }
