--- a/src/components/Skills_page/TechSkills.scss
+++ b/src/components/Skills_page/TechSkills.scss
@@ -9,12 +9,18 @@
 
   .skills-text {
     text-align: right;
-    margin-top: -0.7em;;
+    margin-top: -0.7em;
+    width: 25em;
   }
 
   h3 {
     color: $body-color;
-    margin-top: 1.3em;
+    margin-top: 1em;
+  }
+  
+  h2 {
+    font-size: 1.3em;
+    margin-top: -0.7em;
   }
 
   .move-right{
@@ -24,6 +30,9 @@
 
   .move-up {
     margin-top: -0.7em;
+    position: relative;
+    right: -1em;
+    width: 18.5em;
   }
 
   img {
