--- a/src/components/Home_page/Summary.scss
+++ b/src/components/Home_page/Summary.scss
@@ -4,6 +4,14 @@ article {
   width: 80vw;
   padding-top: 1em;
   margin: 0 auto;
+
+  a {
+    text-decoration: none;
+
+    :hover {
+      color: $dark-red;
+    }
+  }
 }
 
 h3 {
