--- a/src/components/Home_page/Contact.scss
+++ b/src/components/Home_page/Contact.scss
@@ -2,27 +2,25 @@
 
 .Contact {
   text-align: right;
-  margin-top: -1.5em;
+  //margin-top: -1.5em;
 
   p {
-    margin: .3em 0 .3em 0;
+    //margin: .3em 0 .3em 0;
   }
 
   h2 {
-    margin: .3em 0 .3em 0;
+    //margin: .3em 0 .3em 0;
   }
 
   h4 {
-    margin: 0 .3em 0 .3em;
+    //margin: 0 .3em 0 .3em;
   }
 }
 
 .contact-button {
   display: flex;
-  align-items: center;
-  justify-content: flex-end;
 
-  margin-right: -0.3em;
+  //margin-right: -0.3em;
   text-align: left;
 }
 
