--- a/src/components/Home_page/Summary.scss
+++ b/src/components/Home_page/Summary.scss
@@ -1,9 +1,8 @@
 @import '../App.scss';
 
 article {
-  width: 80vw;
-  padding-top: 1em;
-  margin: 0 auto;
+  //padding-top: 1em;
+  //margin: 0 auto;
 
   a {
     text-decoration: none;
@@ -15,7 +14,7 @@ article {
 }
 
 h3 {
-  margin: .5em 0 1.5em 0;
+  //margin: .5em 0 1.5em 0;
 }
 
 .arrow {
