--- a/src/components/Shared/Divider.scss
+++ b/src/components/Shared/Divider.scss
@@ -2,7 +2,7 @@
 
 .Divider {
   border-bottom: 2px solid $text-color;
-  width: 95vw;
-  padding-top: 1em;
-  margin-bottom: 1em;
+  width: 90%;
+  //padding-top: 1em;
+  //margin-bottom: 1em;
 }
