--- a/src/components/Home_page/Social.scss
+++ b/src/components/Home_page/Social.scss
@@ -1,6 +1,6 @@
 @import '../App.scss';
 
 .contact-icons {
-  font-size: 2em;
-  margin: 0 .5em 0 .5em;
+  //font-size: 2em;
+  //margin: 0 .5em 0 .5em;
 }
