--- a/src/components/Shared/Button.scss
+++ b/src/components/Shared/Button.scss
@@ -1,7 +1,7 @@
 @import '../App.scss';
 
 .Button {
-  margin-top: -2.5em;
+  //margin-top: -2.5em;
   color: $dark-red;
   font-family: $title-font;
 }
