--- a/src/components/Shared/Timeline.scss
+++ b/src/components/Shared/Timeline.scss
@@ -8,23 +8,21 @@
   aside {
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
-    justify-content: right;
     
     text-align: right;
     width: 90%;
 
     h3 {
       text-align: right;
-      margin-top: .65em;
+      //margin-top: .65em;
     }
 
     .year2 {
-      margin-top: -.5em;
+      //margin-top: -.5em;
     }
 
     .down-arrow {
-      margin: -1.8em 0 .9em 0;
+      //margin: -1.8em 0 .9em 0;
     }
 
   }
