--- a/src/components/Skills_page/SoftSkills.scss
+++ b/src/components/Skills_page/SoftSkills.scss
@@ -5,24 +5,23 @@
   justify-content: center;
 
   text-align: left;
-  width: 90vw;
-  padding: 1em 0 1em 0;
+  //padding: 1em 0 1em 0;
 
   .soft-skills {
     width: 40%;
   }
 
   h1 {
-    margin-top: .5em;
+    //margin-top: .5em;
   }
 
   h3 {
-    margin-top: .7em;
+    //margin-top: .7em;
   }
 
   .soft-skills-list {
 
-    font-size: 1.1em;
+    //font-size: 1.1em;
 
     span {
       font-weight: 700;
