--- a/src/components/Skills_page/TechSkills.scss
+++ b/src/components/Skills_page/TechSkills.scss
@@ -2,25 +2,21 @@
 
 .TechSkills {
   display: flex;
-  justify-content: center;
-  align-items: center;
-
-  width: 93vw;
 
   .skills-text {
     text-align: right;
-    margin-top: -0.7em;
+    //margin-top: -0.7em;
     width: 25em;
   }
 
   h3 {
     color: $body-color;
-    margin-top: 1em;
+    //margin-top: 1em;
   }
   
   h2 {
-    font-size: 1.3em;
-    margin-top: -0.7em;
+    //font-size: 1.3em;
+    //margin-top: -0.7em;
   }
 
   .move-right{
@@ -29,7 +25,7 @@
   }
 
   .move-up {
-    margin-top: -0.7em;
+    //margin-top: -0.7em;
     position: relative;
     right: -1em;
     width: 18.5em;
@@ -37,6 +33,6 @@
 
   img {
     height: 50vh;
-    margin: 1em 0 1em 0;
+    //margin: 1em 0 1em 0;
   }
 }
