--- a/src/components/Home_page/Summary.scss
+++ b/src/components/Home_page/Summary.scss
@@ -1,5 +1,17 @@
 @import '../App.scss';
 
+.Summary {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-items: center;
+
+  #pdfviewer {
+    width: 90%;
+    padding-top: 1.5em;
+  }
+}
+
 article {
 
   a {
@@ -14,7 +26,7 @@ article {
 .arrow {
 	bottom: 50%;
   left: 50%;
-  color: $dark-red;
+  color: $desktop-red;
 }
 
 .bounce {
