--- a/src/components/Sidebar/Contact.scss
+++ b/src/components/Sidebar/Contact.scss
@@ -4,17 +4,17 @@
   text-align: right;
   //margin-top: -1.5em;
 
-  p {
-    //margin: .3em 0 .3em 0;
-  }
+  // p {
+  //   //margin: .3em 0 .3em 0;
+  // }
 
-  h2 {
-    //margin: .3em 0 .3em 0;
-  }
+  // h2 {
+  //   //margin: .3em 0 .3em 0;
+  // }
 
-  h4 {
-    //margin: 0 .3em 0 .3em;
-  }
+  // h4 {
+  //   //margin: 0 .3em 0 .3em;
+  // }
 }
 
 .contact-button {
